Ditch java 9 modules